2002-07-01  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-sync-menu.c
	(bonobo_ui_sync_menu_new): create an accel group
	if we don't get one.

2002-06-28  Michael Meeks  <michael@ximian.com>

	* tests/control/test-control.c (run_tests): get
	re-parenting ref counting right ...
	(destroy_test): assert that the container widget
	got correctly destroyed.

	* bonobo/bonobo-plug.c (bonobo_plug_realize),
	(bonobo_plug_unrealize): remove bogus ref/unref on
	control - originally not being used, but exposing a
	nasty leak since Mark removed the show () after plug
	creation. Thanks to Dave Camp for the lead.

2002-06-27  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-dock-item.c: include config.h.
	(bonobo_dock_item_realize): Use the root window on
	same screen as the dock for the parent of the float
	window.
	(bonobo_dock_item_motion): also get the location of
	the pointer relative to the same root window.

2002-06-25  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control.c: (impl_Bonobo_Control_getWindowId):
	s/gdk_get_default_screen/gdk_screen_get_default/
	s/gdk_get_default_display/gdk_display_get_default/

2002-06-25  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: actually add check for multihead gtk+
	this time.

2002-06-18  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-control-frame.c:
	(bonobo_control_frame_get_remote_window_id): impl with
	multiscreen support.
	(bonobo_control_frame_get_remote_window): use it here.

	* bonobo/bonobo-control.c: (create_plug): don't show the
	plug here.
	(parse_cookie): parse ',' delimited string returning the
	screen number.
	(impl_Bonobo_Control_getWindowId): parse the cookie and
	set the screen on which the plug should realize accordingly.
	(bonobo_control_do_popup_full): show the menu on the same
	screen as the plug.

	* bonobo/bonobo-ui-init-gtk.c: use HAVE_GTK_MULTIHEAD.

	* configure.in: add check for multihead gtk+.

2002-06-11  Michael Meeks  <michael@ximian.com>
